check whether the image wsp is valid

We should check whether a weak shared pointer is valid, instead
of checking the pointer -- which isn't set to 0 after the corresponding
shared pointer is deleted.

Should be backported to 2.3.

CCMAIL:kimageshop@kde.org

BUG:261940